A modal dialog to warn the user if account manager could not be contacted

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=594576

Reviewed-by: Danielle Madeley <danielle.madeley@collabora.co.uk>